--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 body,h1,h5 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
-  background-image: url('https://www.w3schools.com/w3images/onepage_restaurant.jpg');
+  background-image: url('http://images5.fanpop.com/image/photos/25000000/Coffee-Shop-starbucks-25055174-1280-800.jpg');
   min-height: 100%;
   background-position: center;
   background-size: cover;
